<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:padding="16dp"
    android:layout_margin="16dp"
    android:background="#ec407a">

    <TextView
        android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:textAllCaps="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/item_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list_quantity"
        android:layout_weight="4"
        android:textAllCaps="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <Button
            android:id="@+id/sell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sell"/>

    </LinearLayout>
    <TextView
        android:id="@+id/item_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_price"
        android:textAllCaps="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

</LinearLayout>