<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#B39DDB">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.inventoryapp.EditorActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_item"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_margin="12dp"/>

    <EditText
        android:id="@+id/enter_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=" Enter Item Name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_margin="12dp"/>

    <EditText
        android:id="@+id/enter_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint=" Enter Item Price"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_margin="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add" />

        <EditText
            android:id="@+id/enter_quantity"
            android:layout_width="0dp"
            android:hint="0"
            android:inputType="number"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/subtract"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sub" />

    </LinearLayout>

    <Button
        android:id="@+id/add_item_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@mipmap/add_image" />

    <ImageView
        android:id="@+id/added_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
</ScrollView>