<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BA68C8"
    tools:context="com.example.android.inventoryapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

    <ImageView
        android:id="@+id/empty_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/nothing_found" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/no_item_found" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:background="#FFD600"
            android:drawableLeft="@mipmap/add_item_icon"
            android:text="@string/add_product" />

        <Button
            android:id="@+id/delete_all_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#FFD600"
            android:padding="8dp"
            android:layout_toRightOf="@id/add_item"
            android:drawableLeft="@mipmap/delete_all_items"
            android:text="@string/delete_all_products" />
    </LinearLayout>




</RelativeLayout>
